bloodc/src/parser/snapshots/bloodc__parser__tests__simple_enum.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Enum(
            EnumDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                        start_line: 2,
                        start_col: 6,
                    },
                },
                type_params: None,
                variants: [
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 2,
                            },
                            span: Span {
                                start: 18,
                                end: 21,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                        body: Unit,
                        span: Span {
                            start: 18,
                            end: 21,
                            start_line: 3,
                            start_col: 5,
                        },
                    },
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 3,
                            },
                            span: Span {
                                start: 27,
                                end: 32,
                                start_line: 4,
                                start_col: 5,
                            },
                        },
                        body: Unit,
                        span: Span {
                            start: 27,
                            end: 32,
                            start_line: 4,
                            start_col: 5,
                        },
                    },
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 4,
                            },
                            span: Span {
                                start: 38,
                                end: 42,
                                start_line: 5,
                                start_col: 5,
                            },
                        },
                        body: Unit,
                        span: Span {
                            start: 38,
                            end: 42,
                            start_line: 5,
                            start_col: 5,
                        },
                    },
                ],
                span: Span {
                    start: 1,
                    end: 45,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 45,
        start_line: 2,
        start_col: 1,
    },
}
