bloodc/src/parser/snapshots/bloodc__parser__tests__struct_update_single_field.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Record {
                                    path: Some(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 9,
                                                            end: 15,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 9,
                                                end: 15,
                                                start_line: 1,
                                                start_col: 10,
                                            },
                                        },
                                    ),
                                    fields: [
                                        RecordExprField {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 18,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            value: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Bool(
                                                                true,
                                                            ),
                                                            span: Span {
                                                                start: 25,
                                                                end: 29,
                                                                start_line: 1,
                                                                start_col: 26,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 25,
                                                        end: 29,
                                                        start_line: 1,
                                                        start_col: 26,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 18,
                                                end: 29,
                                                start_line: 1,
                                                start_col: 19,
                                            },
                                        },
                                    ],
                                    base: Some(
                                        Expr {
                                            kind: Call {
                                                callee: Expr {
                                                    kind: Path(
                                                        ExprPath {
                                                            segments: [
                                                                ExprPathSegment {
                                                                    name: Spanned {
                                                                        node: SymbolU32 {
                                                                            value: 2,
                                                                        },
                                                                        span: Span {
                                                                            start: 33,
                                                                            end: 39,
                                                                            start_line: 1,
                                                                            start_col: 34,
                                                                        },
                                                                    },
                                                                    args: None,
                                                                },
                                                                ExprPathSegment {
                                                                    name: Spanned {
                                                                        node: SymbolU32 {
                                                                            value: 4,
                                                                        },
                                                                        span: Span {
                                                                            start: 41,
                                                                            end: 48,
                                                                            start_line: 1,
                                                                            start_col: 42,
                                                                        },
                                                                    },
                                                                    args: None,
                                                                },
                                                            ],
                                                            span: Span {
                                                                start: 33,
                                                                end: 48,
                                                                start_line: 1,
                                                                start_col: 34,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 33,
                                                        end: 48,
                                                        start_line: 1,
                                                        start_col: 34,
                                                    },
                                                },
                                                args: [],
                                            },
                                            span: Span {
                                                start: 33,
                                                end: 50,
                                                start_line: 1,
                                                start_col: 34,
                                            },
                                        },
                                    ),
                                },
                                span: Span {
                                    start: 9,
                                    end: 52,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 54,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 54,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 54,
        start_line: 1,
        start_col: 1,
    },
}
